bugfix for double scroll bars

--- a/src/styles/window.css
+++ b/src/styles/window.css
@@ -46,7 +46,7 @@
     max-height: 100%;
     max-width: 100%;
     height: max-content;
-    overflow: scroll;
+    /* overflow: scroll; */
 }
 
 .window-image {
